# media-prodaction

./: .env.example  .gitignore  CLAUDE.md  README.md  TODO.md  main.py  pyproject.toml
.github/workflows/: deploy.yml
deploy/: VPS_SETUP.md  deploy.sh  media-factory.service
src/content_factory/api/: jobs.py  server.py  web_routes.py
src/content_factory/bot/: bot.py
src/content_factory/config/: settings.py
src/content_factory/core/: _sync.py  clip_finder.py  subtitle_generator.py  video_composer.py  video_cutter.py  whisper_cache.py  youtube_uploader.py
src/content_factory/db/: library.py
src/content_factory/scheduler/: auto_generate.py
src/content_factory/ui/: app.py
src/content_factory/ui/web/: index.html
