[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "content-factory"
version = "0.1.0"
description = "Automated short-form video factory for YouTube Shorts and TikTok Reels"
requires-python = ">=3.10"
dependencies = [
    "openai-whisper",
    "gradio>=4.0",
    "ffmpeg-python",
    "srt",
    "python-telegram-bot[job-queue]>=20.0",
    "python-dotenv",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "anthropic>=0.36",
    "google-genai>=1.0",
    "google-api-python-client>=2.100",
    "google-auth-oauthlib>=1.0",
    "google-auth-httplib2>=0.1",
    "groq>=0.9",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = ["black", "ruff", "pytest"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[tool.setuptools.packages.find]
where = ["src"]
